# VisionComputador

./: .gitignore  main.cpp
P1/: CMakeLists.txt
P2/: CMakeLists.txt  P2.cpp  aprender.cpp  fileSystem.cpp  fileSystem.h  objectFunctions.cpp  objectFunctions.h  reconocer.cpp
P3/: CMakeLists.txt  Practica3.cpp
P4/: CMakeLists.txt  Practica4.cpp  matcher_simple.cpp
P4/camera_calibration/: CMakeLists.txt  settings.xml
