cmake_minimum_required(VERSION 2.8)
project( P2 )
find_package( OpenCV REQUIRED )
add_executable( P2 P2.cpp )
add_executable( aprender aprender.cpp objectFunctions.h objectFunctions.cpp fileSystem.h fileSystem.cpp)
add_executable( reconocer reconocer.cpp objectFunctions.h objectFunctions.cpp fileSystem.h fileSystem.cpp)
target_link_libraries( P2 ${OpenCV_LIBS} )
target_link_libraries( aprender ${OpenCV_LIBS})
target_link_libraries( reconocer ${OpenCV_LIBS})
